// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parse example.mgsdl 1`] = `
{
  "enums": {
    "UserStatus": {
      "values": [
        "Pending",
        "Active",
        "Inactive",
      ],
    },
  },
  "externals": [
    "UserDetailsInterface",
  ],
  "models": {
    "Project": {
      "schema": {
        "creator": {
          "dataType": {
            "refModels": [
              "User",
            ],
            "type": "ObjectId",
          },
          "isImmutable": false,
          "isIndex": true,
          "isRequired": true,
          "isUnique": false,
          "isValidatable": false,
          "isVirtual": false,
        },
        "details": {
          "dataType": {
            "refSchema": "ProjectDetails",
            "type": "Schema",
          },
          "isImmutable": false,
          "isIndex": false,
          "isRequired": true,
          "isUnique": false,
          "isValidatable": false,
          "isVirtual": false,
        },
        "detailsByUserId": {
          "dataType": {
            "elementRequired": true,
            "elementType": {
              "refSchema": "ProjectDetails",
              "type": "Schema",
            },
            "type": "Map",
          },
          "isImmutable": true,
          "isIndex": false,
          "isRequired": false,
          "isUnique": false,
          "isValidatable": false,
          "isVirtual": false,
        },
        "lastAccessedByUserId": {
          "dataType": {
            "elementRequired": false,
            "elementType": {
              "type": "String",
            },
            "type": "Map",
          },
          "isImmutable": false,
          "isIndex": false,
          "isRequired": true,
          "isUnique": false,
          "isValidatable": false,
          "isVirtual": false,
        },
      },
    },
    "User": {
      "schema": {
        "computedFields": {
          "dataType": {
            "refType": "UserDetailsInterface",
            "type": "External",
          },
          "isImmutable": false,
          "isIndex": false,
          "isRequired": true,
          "isUnique": false,
          "isValidatable": false,
          "isVirtual": true,
        },
        "email": {
          "dataType": {
            "type": "String",
          },
          "isImmutable": false,
          "isIndex": true,
          "isRequired": true,
          "isUnique": true,
          "isValidatable": false,
          "isVirtual": false,
        },
        "fullName": {
          "dataType": {
            "type": "String",
          },
          "isImmutable": false,
          "isIndex": false,
          "isRequired": true,
          "isUnique": false,
          "isValidatable": false,
          "isVirtual": true,
        },
        "name": {
          "dataType": {
            "type": "String",
          },
          "isImmutable": false,
          "isIndex": false,
          "isRequired": false,
          "isUnique": false,
          "isValidatable": false,
          "isVirtual": false,
        },
        "status": {
          "dataType": {
            "refEnum": "UserStatus",
            "type": "Enum",
          },
          "isImmutable": false,
          "isIndex": false,
          "isRequired": true,
          "isUnique": false,
          "isValidatable": true,
          "isVirtual": false,
        },
        "unknownRef": {
          "dataType": {
            "refModels": [],
            "type": "ObjectId",
          },
          "isImmutable": false,
          "isIndex": false,
          "isRequired": true,
          "isUnique": false,
          "isValidatable": false,
          "isVirtual": false,
        },
      },
    },
  },
  "schemas": {
    "ProjectDetails": {
      "alternateNames": {
        "dataType": {
          "elementRequired": true,
          "elementType": {
            "type": "String",
          },
          "type": "Array",
        },
        "isImmutable": false,
        "isIndex": false,
        "isRequired": true,
        "isUnique": false,
        "isValidatable": false,
        "isVirtual": false,
      },
      "dynamicRef": {
        "dataType": {
          "refModels": [
            "User",
            "Project",
          ],
          "type": "ObjectId",
        },
        "isImmutable": false,
        "isIndex": false,
        "isRequired": true,
        "isUnique": false,
        "isValidatable": false,
        "isVirtual": false,
      },
      "isActive": {
        "dataType": {
          "type": "Boolean",
        },
        "isImmutable": true,
        "isIndex": false,
        "isRequired": true,
        "isUnique": false,
        "isValidatable": false,
        "isVirtual": false,
      },
      "name": {
        "dataType": {
          "type": "String",
        },
        "isImmutable": false,
        "isIndex": false,
        "isRequired": true,
        "isUnique": false,
        "isValidatable": false,
        "isVirtual": false,
      },
      "number": {
        "dataType": {
          "type": "Number",
        },
        "isImmutable": false,
        "isIndex": false,
        "isRequired": false,
        "isUnique": true,
        "isValidatable": false,
        "isVirtual": false,
      },
      "startDate": {
        "dataType": {
          "type": "Date",
        },
        "isImmutable": false,
        "isIndex": false,
        "isRequired": false,
        "isUnique": false,
        "isValidatable": true,
        "isVirtual": false,
      },
    },
  },
  "unions": {
    "UserOrProject": {
      "refModels": [
        "User",
        "Project",
      ],
    },
  },
}
`;

exports[`parse invalid cases 1`] = `
[Error: Unexpected syntax near:
bah]
`;

exports[`parse invalid cases 2`] = `
[Error: Unexpected syntax near:
bah]
`;

exports[`parse invalid cases 3`] = `
[Error: Unexpected syntax near:
unknown UserStatus {
  Pending
  Active
  Inactive
}]
`;

exports[`parse invalid cases 4`] = `
[Error: Unexpected syntax near:
enum UserStatus
  Pending
  Active
  Inactive
}]
`;

exports[`parse invalid cases 5`] = `
[Error: Unexpected syntax near:
//]
`;

exports[`parse invalid cases 6`] = `[Error: Unknown directives: unknown]`;

exports[`parse invalid cases 7`] = `[Error: Field email has unknown type Unknown]`;

exports[`parse invalid cases 8`] = `
[Error: Unexpected syntax near:
name String]
`;
